--- a/AdvancedKeyboardDrive/AdvancedKBMControls.csproj
+++ b/AdvancedKeyboardDrive/AdvancedKBMControls.csproj
@@ -31,15 +31,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="0Harmony">
-      <HintPath>..\libs\0Harmony.dll</HintPath>
+    <Reference Include="0Harmony12">
+      <HintPath>C:\Users\cbeth\OneDrive\Documents\MySummerCar\Mods\References\0Harmony12.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\Games\SteamLibrary\steamapps\common\My Summer Car\mysummercar_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
+    <Reference Include="Assembly-CSharp-firstpass, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>D:\Games\SteamLibrary\steamapps\common\My Summer Car\mysummercar_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+    </Reference>
     <Reference Include="cInput">
       <HintPath>D:\Games\SteamLibrary\steamapps\common\My Summer Car\mysummercar_Data\Managed\cInput.dll</HintPath>
+    </Reference>
+    <Reference Include="ES2, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>D:\Games\SteamLibrary\steamapps\common\My Summer Car\mysummercar_Data\Managed\ES2.dll</HintPath>
     </Reference>
     <Reference Include="MSCLoader">
       <HintPath>D:\Games\SteamLibrary\steamapps\common\My Summer Car\mysummercar_Data\Managed\MSCLoader.dll</HintPath>
@@ -60,18 +68,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdvancedKBMControls.cs" />
-    <Compile Include="MouseLook.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>if "$(ConfigurationName)" == "Debug" (
-copy $(TargetPath) "C:\Users\cbethax\Documents\MySummerCar\Mods" /y
-copy "$(TargetDir)$(TargetName).pdb" "C:\Users\cbethax\Documents\MySummerCar\Mods" /y
-cd "C:\Users\cbethax\Documents\MySummerCar\Mods"
-call "C:\Users\cbethax\Documents\MySummerCar\Mods\debug.bat"
+copy $(TargetPath) "C:\Users\cbeth\OneDrive\Documents\MySummerCar\Mods" /y
+copy "$(TargetDir)$(TargetName).pdb" "C:\Users\cbeth\OneDrive\Documents\MySummerCar\Mods" /y
+cd "C:\Users\cbeth\OneDrive\Documents\MySummerCar\Mods"
+call "C:\Users\cbeth\OneDrive\Documents\MySummerCar\Mods\debug.bat"
 ) ELSE (
-copy $(TargetPath) "C:\Users\cbethax\Documents\MySummerCar\Mods" /y
+copy $(TargetPath) "C:\Users\cbeth\OneDrive\Documents\MySummerCar\Mods" /y
 )</PostBuildEvent>
   </PropertyGroup>
 </Project>
